--- a/.github/workflows/build-360t7.yml
+++ b/.github/workflows/build-360t7.yml
@@ -181,7 +181,8 @@ jobs:
         svn co https://github.com/openwrt/packages/trunk/net/natmap  package/mycustom/natmap
         svn co https://github.com/openwrt/luci/trunk/applications/luci-app-natmap  package/mycustom/luci-app-natmap
         sed -i 's|include.*luci.mk|include $(TOPDIR)/feeds/luci/luci.mk|g' package/mycustom/luci-app-natmap/Makefile
-        
+
+        cat feeds.conf*
         ./scripts/feeds install -a
         
         cp hanwckfop/defconfig/mt7981-ax3000.config .config
