--- a/.github/workflows/build-360t7.yml
+++ b/.github/workflows/build-360t7.yml
@@ -185,7 +185,11 @@ jobs:
         svn co https://github.com/openwrt/luci/trunk/applications/luci-app-natmap  "package/mycustom/luci-app-natmap"
         sed -i 's|include.*luci.mk|include $(TOPDIR)/feeds/luci/luci.mk|g' package/mycustom/luci-app-natmap/Makefile
 
-        cat feeds.conf*
+        cd feeds/packages/
+        wget https://github.com/openwrt/packages/commit/7bbea01d7e2473faedb570cbcf2b64da8004e85a.patch -q --no-check-certificate -O disable_glib2_fortify_source.patch
+        git apply disable_glib2_fortify_source.patch
+        cd ../../
+        
         ./scripts/feeds install -a
         
         cp hanwckfop/defconfig/mt7981-ax3000.config .config
