--- a/.github/workflows/build-360t7.yml
+++ b/.github/workflows/build-360t7.yml
@@ -229,7 +229,8 @@ jobs:
         cd openwrt/bin/targets/*/*
         rm -rf packages
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
-        echo "::set-output name=status::success"
+        #echo "::set-output name=status::success"
+        echo "status=success" >> $GITHUB_OUTPUT
         cp ../../../../.config .
 
     - name: Upload firmware directory
