--- a/.github/workflows/build-BetterJoy-new.yml
+++ b/.github/workflows/build-BetterJoy-new.yml
@@ -115,8 +115,8 @@ jobs:
         "C:\Program Files\Git\usr\bin\sed.exe" -i "s/No accelerometer reported/没有已报告的加速度计/" BetterJoy/UdpServer.cs
         "C:\Program Files\Git\usr\bin\sed.exe" -i "s/No gyroscope reported/没有已报告的陀螺仪/" BetterJoy/UdpServer.cs
         cd BetterJoy
-        "C:\Program Files\Git\mingw64\bin\curl.exe" -O https://github.com/d3xMachina/BetterJoy/releases/download/v8.3/BetterJoy.zip
-        "C:\Program Files\Git\usr\bin\unzip.exe" -fo BetterJoy.zip
+        "C:\Program Files\Git\mingw64\bin\curl.exe" -L -O https://github.com/d3xMachina/BetterJoy/releases/download/v8.3/BetterJoy.zip
+        "C:\Program Files\Git\usr\bin\unzip.exe" -o BetterJoy.zip
 
     # 安装 .NET Core
     - name: Install .NET Core
